--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body{
     justify-content: center;
     align-items: center;
     cursor: pointer;
-
+    z-index: 10000;
     font-size: 2em;
     transition: transform 1.25s;
 }
