--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,13 +24,13 @@
             <a href="#"><ion-icon name="mail-outline"></ion-icon></a>
         </li>
         <li style="--i:4;--clr:#01eeff;">
-            <a href="#"><ion-icon name="key-outline"></ion-icon></a>
+            <a href="#"><ion-icon name="extension-puzzle-outline"></ion-icon></a>
         </li>
         <li style="--i:5;--clr:#003cff;">
             <a href="#"><ion-icon name="videocam-outline"></ion-icon></a>
         </li>
         <li style="--i:6;--clr:#ffa600;">
-            <a href="#"><ion-icon name="game-controller-outline"></ion-icon></a>
+            <a href="#"><ion-icon name="accessibility-outline"></ion-icon></a>
         </li>
         <li style="--i:7;--clr:#e5ff00;">
             <a href="acessos_menu/video.html"><ion-icon name="camera-outline"></ion-icon></a>
