--- a/Templates/base.html
+++ b/Templates/base.html
@@ -14,12 +14,12 @@
 <body>
 <div class="menu-horizontal">
  <ul>
-    <li><a href="xxx"> Home</a></li>
-    <li><a href="xxx">O que é Scrum</a></li>
-    <li><a href="yxx">Equipe Scrum</a></li>
-    <li><a href="yxx">Pilares  Scrum</a></li>
-    <li><a href="yxx">Ferramentas Scrum</a></li>
-    <li><a href="yxx">Dowloads</a></li>
+    <li><a href="/"> Home</a></li>
+    <li><a href="/scrum">O que é Scrum</a></li>
+    <li><a href="/equipe.scrum">Equipe Scrum</a></li>
+    <li><a href="/pilares">Pilares  Scrum</a></li>
+    <li><a href="/ferramentas">Ferramentas Scrum</a></li>
+    <li><a href="/dowloads">Dowloads</a></li>
  </ul>   
 </div>
     {% block corpo %}
