--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -16,12 +16,12 @@
         
         <a href="#" class="logo">Easy Scrum</a>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/#Oqueé">O que é?</a></li>
-            <li><a href="Equipe">Equipe Scrum</a></li>
-            <li><a href="Pilares" class="active">Pilares</a></li>
-            <li><a href="Ferramentas">Ferramentas</a></li>
-            <li><a href="Downloads">Downloads</a></li>
+            <li><a href="../Templates/index.html">Home</a></li>
+            <li><a href="../Templates/index.html/#Oqueé">O que é?</a></li>
+            <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
+            <li><a href="../Templates/pilares.html" class="active">Pilares</a></li>
+            <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
+            <li><a href="../Templates/download.html">Downloads</a></li>
 
         </ul>
     </header>
@@ -30,12 +30,12 @@
         <br><br><br><br><br><br><br><br>
         <h2>Transparência:</h2><p>O conhecimento em tempo real sobre o
         andamento do projeto, processos e metas para todo o time!</p>
-        <img src="imagens/transparencia.png" alt="transparencia">
+        <img src="../static/imagens/transparencia.png" alt="transparencia">
         <br><br><br><br><br><br><br><br><br><br><br>
 
         <h2>Inspeção:</h2> <p>O acompanhamento contínuo do time, ele aponta sobre o
         funcionamento esperado e se possíveis mudanças devem ser realizadas!</p>
-        <img src="imagens/inspecao.png" alt="inspecao">
+        <img src="../static/imagens/imagens/inspecao.png" alt="inspecao">
         <br><br><br><br><br><br><br><br><br><br><br>
 
         <h2>Adaptação:</h2> <p> Aplica as correções necessárias quando apontadas na etapa de
@@ -43,7 +43,7 @@
         <img src="imagens/adaptacao.png" alt="adaptacao">
         <br><br><br><br><br><br><br>
         
-        <a href="ferramentas.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Ferramentas<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <a href="../static/imagens/ferramentas.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Ferramentas<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br>  
     </div>
 
