--- a/templates/download.html
+++ b/templates/download.html
@@ -17,12 +17,12 @@
         
         <a href="#" class="logo">Easy Scrum</a>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/#Oqueé">O que é?</a></li>
-            <li><a href="/Equipe">Equipe Scrum</a></li>
-            <li><a href="/Pilares">Pilares</a></li>
-            <li><a href="/Ferramentas">Ferramentas</a></li>
-            <li><a href="/Downloads" class="active">Downloads</a></li>
+            <li><a href="../Templates/index.html">Home</a></li>
+            <li><a href="../Templates/index.html/#Oqueé">O que é?</a></li>
+            <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
+            <li><a href="../Templates/pilares.html">Pilares</a></li>
+            <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
+            <li><a href="../Templates/download.html" class="active">Downloads</a></li>
 
         </ul>
     </header>
