--- a/Templates/index.html
+++ b/Templates/index.html
@@ -19,12 +19,12 @@
         
         <a href="#" class="logo">Easy Scrum</a>
         <ul>
-            <li><a href="/" class="active">Home</a></li>
-            <li><a href="/#Oqueé">O que é?</a></li>
-            <li><a href="/Equipe">Equipe Scrum</a></li>
-            <li><a href="/Pilares">Pilares</a></li>
-            <li><a href="/Ferramentas">Ferramentas</a></li>
-            <li><a href="/Downloads">Downloads</a></li>
+            <li><a href="../Templates/index.html" class="active">Home</a></li>
+            <li><a href="#Oqueé">O que é?</a></li>
+            <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
+            <li><a href="../Templates/pilares.html">Pilares</a></li>
+            <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
+            <li><a href="../Templates/download.html">Downloads</a></li>
 
         </ul>
     </header>
@@ -73,7 +73,7 @@
             
             <a href="equipe.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Equipe<ion-icon name="arrow-forward-outline"></ion-icon></a>
             <br><br><br><br><br><br><br><br>
-            <img src="../static/imagens/equipescrum.png" alt="equipe">
+            <img src="../static/imagens/funcoes.png" alt="equipe">
     </div>
     
     
