--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -26,14 +26,15 @@
         </ul>
     </header>
 
-
-
+    <div class="secgeral">
+        <h2 class="secgeral ">Em desnvolvimento...</h2>
+    
 
 
 
     <a href="download.html" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Downloads<ion-icon name="arrow-forward-outline"></ion-icon></a>
     <br><br><br><br><br><br><br><br>
-
+    </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
