--- a/templates/download.html
+++ b/templates/download.html
@@ -26,6 +26,9 @@
 
         </ul>
     </header>
+    <div class="secgeral">
+        <h2 class="secgeral ">Em desnvolvimento...</h2>
+    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
