--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -35,12 +35,12 @@
 
         <h2>Inspeção:</h2> <p>O acompanhamento contínuo do time, ele aponta sobre o
         funcionamento esperado e se possíveis mudanças devem ser realizadas!</p>
-        <img src="../static/imagens/imagens/inspecao.png" alt="inspecao">
+        <img src="../static/imagens/inspecao.png" alt="inspecao">
         <br><br><br><br><br><br><br><br><br><br><br>
 
         <h2>Adaptação:</h2> <p> Aplica as correções necessárias quando apontadas na etapa de
         inspeção, sempre visando o resultado final esperado! </p>
-        <img src="imagens/adaptacao.png" alt="adaptacao">
+        <img src="../static/imagens/adaptacao.png" alt="adaptacao">
         <br><br><br><br><br><br><br>
         
         <a href="../static/imagens/ferramentas.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Ferramentas<ion-icon name="arrow-forward-outline"></ion-icon></a>
