inclusão de links
encaminhamento dos links na parte inferior do site

--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -34,7 +34,7 @@
 
 
 
-    <a href="download.html" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Downloads<ion-icon name="arrow-forward-outline"></ion-icon></a>
+    <a href="../Templates/download.html" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Downloads<ion-icon name="arrow-forward-outline"></ion-icon></a>
     <br><br><br><br><br><br><br><br>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
