--- a/Templates/index.html
+++ b/Templates/index.html
@@ -71,7 +71,7 @@
             </ul>
             </p>
             
-            <a href="equipe.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Equipe<ion-icon name="arrow-forward-outline"></ion-icon></a>
+            <a href="../Templates/equipe.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Equipe<ion-icon name="arrow-forward-outline"></ion-icon></a>
             <br><br><br><br><br><br><br><br>
             <img src="../static/imagens/funcoes.png" alt="equipe">
     </div>
