--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -47,7 +47,7 @@
         metas do projeto!</p>
         <img src="../static/imagens/equipescrum.png" alt="time" width="900" height="600">
 
-        <a href="Pilares" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <a href="../Templates/pilares.html" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br><br>
     </div>
 
