--- a/Templates/roleta.html
+++ b/Templates/roleta.html
@@ -5,28 +5,28 @@
     <ul class="menu">
         <div class="toggle"><ion-icon name="add-outline"></ion-icon></div>
 
-        <li style="--i:0;--clr:#0077ff;">
-            <a href="index.html">BACKLOG</ion-icon></a>
+        <li style="--i:0;--clr:#ff2972;">
+            <a href="index.html"><ion-icon name="home-outline"></ion-icon></a>
         </li>
-        <li style="--i:1;--clr:#0077ff;">
-            <a href="acessos_menu/contato.html">SPRINT BACKLOG</ion-icon></a>
+        <li style="--i:1;--clr:#fee800;">
+            <a href="acessos_menu/contato.html"><ion-icon name="person-outline"></ion-icon></a>
         </li>
-        <li style="--i:2;--clr:#0077ff;">
-            <a href="acessos_menu/configurações.html">BURNDOWN</ion-icon></a>
+        <li style="--i:2;--clr:#04fc43;">
+            <a href="acessos_menu/configurações.html"><ion-icon name="settings-outline"></ion-icon></a>
         </li>
-        <li style="--i:3;--clr:#0077ff;">
+        <li style="--i:3;--clr:#fe00f1;">
             <a href="#"><ion-icon name="mail-outline"></ion-icon></a>
         </li>
-        <li style="--i:4;--clr:#0077ff;">
+        <li style="--i:4;--clr:#00b0fe;">
             <a href="#"><ion-icon name="extension-puzzle-outline"></ion-icon></a>
         </li>
-        <li style="--i:5;--clr:#0077ff;">
+        <li style="--i:5;--clr:#fea600;">
             <a href="#"><ion-icon name="videocam-outline"></ion-icon></a>
         </li>
-        <li style="--i:6;--clr:#0077ff;">
+        <li style="--i:6;--clr:#a529ff;">
             <a href="#"><ion-icon name="accessibility-outline"></ion-icon></a>
         </li>
-        <li style="--i:7;--clr:#0077ff;">
+        <li style="--i:7;--clr:#01bdab;">
             <a href="acessos_menu/video.html"><ion-icon name="camera-outline"></ion-icon></a>
         </li>
     </ul>
