--- a/Templates/index.html
+++ b/Templates/index.html
@@ -31,9 +31,9 @@
     <section>
         <h2 id="text"><span>Metodologia</span><br><a>Scrum</a></h2>
         <img src="../static/imagens/agua.jpg" id="agua" alt="aguafundo">
-        <a href="#Oqueé" id="btn"><ion-icon name="arrow-down-outline"></ion-icon>Navegue pelo Conhecimento<ion-icon name="arrow-down-outline"></ion-icon></a>
+        <a href="#Oqueé" id="btnhome"><ion-icon name="arrow-down-outline"></ion-icon>Navegue pelo Conhecimento<ion-icon name="arrow-down-outline"></ion-icon></a>
     </section>
-    <div class="sec">
+    <div class="sechome">
         <h2 id="Oqueé">O que é?</h2>
         <br><br>
         <p>O Scrum é uma metodologia que engloba um conjunto de ações visando
