--- a/templates/download.html
+++ b/templates/download.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo">Easy Scrum</a>
         <ul>
             <li><a href="../Templates/index.html">Home</a></li>
-            <li><a href="../Templates/index.html/#Oqueé">O que é?</a></li>
+            <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
             <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
@@ -26,8 +26,8 @@
 
         </ul>
     </header>
-    <div class="secgeral">
-        <h2 class="secgeral ">Em desnvolvimento...</h2>
+    <div class="sec">
+        <h2 class="sec">Em desenvolvimento...</h2>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
