--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo">Easy Scrum</a>
         <ul>
             <li><a href="../Templates/index.html">Home</a></li>
-            <li><a href="../Templates/index.html/#Oqueé">O que é?</a></li>
+            <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
             <li><a href="../Templates/equipe.html" class="active">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
@@ -26,7 +26,7 @@
         </ul>
     </header>
 
-    <div class="secgeral">
+    <div class="sec">
         <br><br><br><br><br><br><br><br>
         <h2>Product Owner:</h2> 
         <p>Dono do projeto e líder do processo como um todo,
@@ -47,7 +47,7 @@
         metas do projeto!</p>
         <img src="../static/imagens/equipescrum.png" alt="time" width="900" height="600">
 
-        <a href="../Templates/pilares.html" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <a href="../Templates/pilares.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br><br>
     </div>
 
