--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -18,24 +18,88 @@
         <a href="#" class="logo">Easy Scrum</a>
         <ul>
             <li><a href="../Templates/index.html">Home</a></li>
-            <li><a href="../Templates/index.html/#Oqueé">O que é?</a></li>
+            <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
             <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html" class="active">Ferramentas</a></li>
             <li><a href="../Templates/download.html">Downloads</a></li>
         </ul>
     </header>
+    <br><br><br><br>
     <div class="sec">
-
+        <div class="artefatos">
+        <h2>Artefatos do Scrum</h2>
+            <p>
+            <h2>Incremento</h2><p>É o resultado do trabalho realizado pela equipe de desenvolvimento em uma determinada Sprint, e além de conter as funcionalidades feitas de cada Sprint anterior, é também composto por melhorias para o que foi produzido. O Incremento deve seguir a Definição de Pronto para se tornar "utilizável", visto que o Product Owner pode decidir apresentá-lo para seus clientes na forma de demonstrações, conseguindo assim, feedback sobre seu produto e progresso.</p>
+            <br><br>
+            <h2>Definição de pronto</h2><p>o nome menciona, esta se trata de um conceito muito importante para qualquer equipe Scrum, responsável por definir a qualidade necessária para transformar um Product Backlog em um Incremento. É uma boa Definição de Pronto que garante um nível de qualidade maior do Incremento a ser apresentado ao cliente. As exigências que compôem cada Definição de Pronto podem ser alteradas de acordo com os problemas que cada equipe irá resolver.</p> 
+            </p>
+            <br><br><br><br>
+        </div>    
+        <div class="backlog">
+            <h2>Backlog do produto (Product Backlog)</h2>
+            <p>
+            Consiste em um conjunto de recursos inéditos, atualizações de segurança, tarefas ou requisitos para desenvolver um produto. Ele e criado a partir das informações coletadas como suporte ao cliente, análise de concorrentes e demandadas mercadológicas.
+            Dentro da metodologia Scrum e considerado um artefato “dinâmico” pois as atividades são atualizadas conforme a demanda do cliente e apurada. O backlog e gerado e administrado pelo Product owner, sendo ele a responsabilidade de avaliar junto com o Scrum team baseado nas necessidades do cliente alterações no backlog.
+            </p>
+            <br><br><br><br>
+        </div>
+        <div class="sprint backlog">
+            <p>
+            Backlog é um dos principais pontos de cada sprint e ajuda a equipe a entender melhor o objetivo de cada uma delas.
+            </p>
+            <h2>O que é Sprint Backlog?</h2>
+           <p>
+            É uma lista que contém todas atividades que precisam ser feitas durante o Sprint.
+            No início de cada Sprint olha-se o backlog do produto e dele se tira o que deve ser feito no Sprint, as users history são desmembradas em atividades a serem realizadas no Sprint.
+            </p>
+            <h2>Como é construído o Sprint Backlog?</h2>
+            <p>as tarefas são extraídas do Product Backlog que é elaborado pelo PO (Product Owner). É uma lista de todas as funcionalidades que são necessárias para um produto, não precisa estar 100% pronto ao começar o projeto pois ao longo do projeto ele vai evoluindo, assim como tudo no Scrum.
+            A partir de todas as atividades dispostas no Productc Backlog, a equipe alinha as prioridades junto ao PO e a percepção de tempo que cada etapa vai consumir.
+            É necessário aceitar que não é possível fazer tudo de uma vez, assim a equipe tem que definir um backlog condizente com a capacidade da equipe.</p> 
+            <br><br><br><br>
+            <h2>Como implementar o Sprint Backlog?</h2>
+            <p>O Sprint Backlog é definido em uma reunião de planejamento, esencial, denominada planing.
+            No entanto o PO pode alterar o Sprint de acordo com os recursos e valor comercial de cada etapa, sempre priorizando as mais importantes.
+            Ao longo do Sprint o Scrum Master irá facilitar as entregas , incentivando a colaboração, conduzindo as reuniões e ajudando a equipe a melhorar a produtividade. Ele detalha as tarefas a serem cumpridas de modo a entender quanto tempo ainda é necessário para cumprir o restante.
+            Uma das maneiras mais usadas para acompanhar a evolução das tarefas é através do gráfico burndown.</p>
+            <img src="image.png" alt="backlog">
+            <br><br><br><br>
+        </div>
+        <div class="burndown">
+            <h2>O que é Burndown?</h2>
+            <p>É um grafico que usa as estimativas de esforço(tempo) feitas para as atividades do Sprint Backlog , por ele pode ser feito o acompanhamento da produtividade no dia a dia.
+                Ele consiste basicamente disso:
+                <br><br>
+                <ul class="comofunciona">
+                    <li>
+                    1- O eixo Y (vertical) é o somatório das estimativas de esforço do Sprint;
+                    </li>
+                    <br>
+                    <li>
+                    2- No eixo (x) é o somatório dos dias trabalhados;
+                    </li>
+                    <br>
+                    <li>
+                    3- É traçada uma linha reta ligando os dois pontos que representa a meta diária de avanço;
+                    </li>
+                    <br>
+                    <li>
+                    4- Dia a dia verifica-se com a equipe as atividades que estão prontas e se marca no gráfico a quantidade de esforço restante até o fim;
+                    </li>
+                    <br>
+                    <li>
+                    5- A meta é chegar a zero no final do Sprint.
+                    </li>
+            </ul>
+            </p>
+            <br><br><br><br><br>
+            <img src="../static/imagens/burndown.jpg" alt="burndown">      
+        </div>
         
+        <a href="../Templates/download.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Downloads<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <br><br><br><br><br><br><br><br>
     </div>
-
-
-
-
-
-    <a href="../Templates/download.html" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Downloads<ion-icon name="arrow-forward-outline"></ion-icon></a>
-    <br><br><br><br><br><br><br><br>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
