--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -17,7 +17,7 @@
         <a href="#" class="logo">Easy Scrum</a>
         <ul>
             <li><a href="../Templates/index.html">Home</a></li>
-            <li><a href="../Templates/index.html/#Oqueé">O que é?</a></li>
+            <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
             <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html" class="active">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
@@ -26,24 +26,24 @@
         </ul>
     </header>
 
-    <div class="secgeral">
+    <div class="sec">
         <br><br><br><br><br><br><br><br>
         <h2>Transparência:</h2><p>O conhecimento em tempo real sobre o
         andamento do projeto, processos e metas para todo o time!</p>
-        <img src="../static/imagens/transparencia.png" alt="transparencia">
+        <img src="../static/imagens/transparencia.png" alt="transparencia" width="400px"  height=400px>
         <br><br><br><br><br><br><br><br><br><br><br>
 
         <h2>Inspeção:</h2> <p>O acompanhamento contínuo do time, ele aponta sobre o
         funcionamento esperado e se possíveis mudanças devem ser realizadas!</p>
-        <img src="../static/imagens/inspecao.png" alt="inspecao">
+        <img src="../static/imagens/inspecao.png" alt="inspecao"  width="500px"  height=400px>
         <br><br><br><br><br><br><br><br><br><br><br>
 
         <h2>Adaptação:</h2> <p> Aplica as correções necessárias quando apontadas na etapa de
         inspeção, sempre visando o resultado final esperado! </p>
-        <img src="../static/imagens/adaptacao.png" alt="adaptacao">
+        <img src="../static/imagens/adaptacao.png" alt="adaptacao" width="400px"  height=400px>
         <br><br><br><br><br><br><br>
         
-        <a href="../static/imagens/ferramentas.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Ferramentas<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <a href="../Templates/ferramentas.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Ferramentas<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br>  
     </div>
 
