--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,7 +119,7 @@ section #text span
     font-weight: 400;
     
 }
-#btn
+#btnhome
 {
  
     text-decoration: none;
@@ -137,7 +137,7 @@ section #text span
     animation-duration: 3s;
     
 }
-.sec{
+.sechome{
     position: relative;
     padding: 100px;
     background: linear-gradient(0deg, #045474, #08a6c5);
@@ -150,7 +150,7 @@ section #text span
     1.5px 0px 0px #000;
     
 }
-.sec h2{
+.sechome h2{
     font-size: 3.5em;
     color: #fff;
     margin-bottom: 10px;
@@ -158,7 +158,7 @@ section #text span
     margin-right: 10%;
     
 }
-.sec p{
+.sechome p{
     font-size: 2em;
     color: #fff;
     margin-left: 10%;
@@ -191,7 +191,7 @@ body.geral{
     background: linear-gradient(100deg, #b0e8fb, #bdccfc);
     
 }
-.secgeral{
+.sec{
     position: relative;
     padding: 100px;
     position: center;
@@ -205,20 +205,20 @@ body.geral{
     margin-right: 10%;
     
 }
-.secgeral h2{
+.sec h2{
     font-size: 3.5em;
     color: #fff;
     margin-bottom: 10px;
     margin-left: 10%;
     margin-right: 10%;
 }
-.secgeral p{
+.sec p{
     font-size: 2em;
     color: #fff;
     margin-left: 10%;
     margin-right: 10%;
 }
-#btngeral
+#btn
 {
  
     text-decoration: none;
