--- a/Templates/index.html
+++ b/Templates/index.html
@@ -24,7 +24,7 @@
             <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
-            <li><a href="../Templates/download.html">Downloads</a></li>
+            <li><a href="../Templates/download.html">Na Prática</a></li>
 
         </ul>
     </header>
@@ -40,7 +40,6 @@
             um melhor funcionamento de todo o projeto, resultando em uma
             significativa melhora em seus recursos e tempos, produzindo mais em
             menos tempo, diminuindo assim o seu custo! </p>
-            
             <br><br><br><br><br><br>
 
             <h2>Como Funciona?</h2><br><br><p>Sua aplicação em 4 etapas:
