--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -21,7 +21,7 @@
             <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html" class="active">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
-            <li><a href="../Templates/download.html">Downloads</a></li>
+            <li><a href="../Templates/download.html">Na Prática</a></li>
 
         </ul>
     </header>
@@ -31,12 +31,12 @@
         <h2>Transparência:</h2><p>O conhecimento em tempo real sobre o
         andamento do projeto, processos e metas para todo o time!</p>
         <img src="../static/imagens/transparencia.png" alt="transparencia" width="400px"  height=400px>
-        <br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br>
 
         <h2>Inspeção:</h2> <p>O acompanhamento contínuo do time, ele aponta sobre o
         funcionamento esperado e se possíveis mudanças devem ser realizadas!</p>
         <img src="../static/imagens/inspecao.png" alt="inspecao"  width="500px"  height=400px>
-        <br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br>
 
         <h2>Adaptação:</h2> <p> Aplica as correções necessárias quando apontadas na etapa de
         inspeção, sempre visando o resultado final esperado! </p>
