--- a/static/css/style.css
+++ b/static/css/style.css
@@ -212,6 +212,13 @@ body.geral{
     margin-left: 10%;
     margin-right: 10%;
 }
+.sec h3{
+    font-size: 2.5em;
+    color: #fff;
+    margin-bottom: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 .sec p{
     font-size: 2em;
     color: #fff;
