--- a/templates/download.html
+++ b/templates/download.html
@@ -22,12 +22,14 @@
             <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
-            <li><a href="../Templates/download.html" class="active">Downloads</a></li>
+            <li><a href="../Templates/download.html" class="active">Na Prática</a></li>
 
         </ul>
     </header>
     <div class="sec">
         <h2 class="sec">Em desenvolvimento...</h2>
+        <i class="fa-solid fa-cog fa-spin"></i>
+        <img src="../static/imagens/estudando.png" alt="em desenvolvimento"> 
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
