--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -22,7 +22,7 @@
             <li><a href="../Templates/equipe.html" class="active">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
-            <li><a href="../Templates/download.html">Downloads</a></li>
+            <li><a href="../Templates/download.html">Na Prática</a></li>
         </ul>
     </header>
 
