--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -15,7 +15,7 @@
 <body class="geral">
     <header id="header">
         
-        <a href="#" class="logo">Easy Scrum</a>
+            <a href="#" class="logo"><ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum</a>
         <ul>
             <li><a href="../Templates/index.html">Home</a></li>
             <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
