--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -15,7 +15,7 @@
 <body class="geral">
     <header id="header">
         
-        <a href="#" class="logo">Easy Scrum</a>
+            <a href="#" class="logo"><ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum</a>
         <ul>
             <li><a href="../Templates/index.html">Home</a></li>
             <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
@@ -33,14 +33,14 @@
         toma as decisões e avalia os recursos, ele também define o esperado de
         cada membro e o objetivo do projeto!</p>
         <img src="../static/imagens/productowner.png" alt="productowner">
-        <br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br>
         <h2>Scrum Master:</h2> 
         <p>Auxilia a equipe na solução de problemas, por conhecer
         bem sobre o funcionamento do Scrum é uma função importantíssima
         dentro do projeto afastando tudo aquilo que pode atrapalhar o
         desenvolvimento das sprints do projeto!</p>
         <img src="../static/imagens/scrummaster.png" alt="scrummaster">
-        <br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br>
         <h2>Time Scrum:</h2> 
         <p>São todos aqueles que desenvolvem o projeto, atuando em
         colaboração e sempre se autogerenciando a respeito de atividades e
