--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -13,16 +13,31 @@
 </head>
 <body class="geral">
     <header id="header">
-        
-            <a href="#" class="logo"><ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum</a>
-        <ul>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="logo" href="#">
+                <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
+              </a>
+            </div>
+        </nav>
+        <ul class="principal">
             <li><a href="../Templates/index.html">Home</a></li>
             <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
             <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
             <li><a href="../Templates/pilares.html" class="active">Pilares</a></li>
-            <li><a href="../Templates/ferramentas.html">Ferramentas</a></li>
+            <li><a href="../Templates/ferramentas.html">Ferramentas</a>
+                <ul class="submenu">
+                    <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
+                    <hr>
+                    <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
+                    <hr>
+                    <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
+                    <hr>
+                    <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
+                </ul>
+            
+            </li>
             <li><a href="../Templates/download.html">Na Prática</a></li>
-
         </ul>
     </header>
 
